--- a/index.html
+++ b/index.html
@@ -91,6 +91,27 @@
             <span class="heading-container__heading--big">Creating a Brighter Future</span>
         </div>
     </div>
+    <section class="section section--light">
+        <h2>WANT TO VISIT?</h2>
+
+        <P class="g-maps">FOLLOW THE GOOGLE MAPS BELOW!!</P>
+
+    </section>
+
+    <div class="background-container--image6">
+        <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d988.7189392409223!2d38.671192969701195!3d7.5884996995266345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x17b477ca2ded82af%3A0x8f355167546026ec!2sDaka%20Dalu!5e0!3m2!1sen!2sus!4v1696158129537!5m2!1sen!2sus"
+                style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div>
+    <section class="section section--light">
+        <h2>LOCATION</h2>
+        <p>
+            <h2><small>WHERE?</small></h2>
+            We are located in the heart of Oromia Regional State, west Arsi Zone, Negelle Arsi wereda, Daka Delu Harangema kebele.
+        </p>
+
+    </section>
 </body>
 
 <footer class="footer">
