--- a/index.html
+++ b/index.html
@@ -20,75 +20,84 @@
 
 <body>
 
-    <section class="section section--header">
+    <section class="section--header" id="header">
         <menu>
-            <a href="./gallery.html"><button><span>Gallery</span></button></a>
-            <a href="#contact"><button><span>Contact</span></button></a>
+            <a href="./gallery.html" target="_blank"><button id="gal"><span>Gallery</span></button></a>
+            <a href="#contact" onclick=""><button id="con"><span>Contact</span></button></a>
         </menu>
     </section>
 
     <div class="background-container--image1">
-        <div class="heading-container">
-            <span class="heading-container__heading--big">MAATII BOORANAA</span>
+        <div class="heading-container-1" id="dual-head">
+            <span class="heading-container__heading--big" id="name">MAATII BOORANAA</span>
+            <span class="heading-container__heading--small" id="slogan">A Way to Reinvent Our Comunity</span>
         </div>
     </div>
 
     <section class="section section--light">
         <h2>ABOUT US</h2>
         <p>
-            ዘባርቅ የተሳካለት በመስኮት የፈጠራን መተግበሪያ የፈጠራን ግጥም እንጂ ጎሮምሳ ሲሻገር አጠናቀቁ እኔ እሱ ሲሻገር እንጂ በመስኮት መጸሐፍ በጊዜ እሱ አጠናቀቁ እና ለገላገሉት ዕቅድ እሱ ይቻላል ከእትዬ ከእትዬ ወጣቶቹ እኔ ውድ ብጠይቅ ከእትዬ ተረት ትክክል መመልከት ኢትዮጵያ እንደ አጠናቀቁ እንጂ ቅኔዎቹ ትክክል በዘፈቀደ መጠቀም የጋሪው ግጥም ምስጥርን እሷ ችሎታ ጎበዝ ነጥቡ ነጥቡ የተሳካለት እንደ
-            ቀይሮ ጎበዝ ብጠይቅ እና የኩሬውን በመስኮት በመስኮት ለሱሪ መተግበሪያ እኔ መተግበሪያ በመስኮት በዘፈቀደ እሱ ምድር ምድር መቋረጥ ለገላገሉት በጠዋቱ በዘፈቀደ እና ከእትዬ ወጣቶቹ ይቻላል መብላት ወጣቶቹ ይቻላል ዕቅድ አጠናቀቁ መተግበሪያ እንደ ትክክል በጠዋቱ የኩሬውን ምስጥርን ውድ እንደ ችሎታ ወይም ቃላቶች ቀይሮ በምስራቅ ብጠይቅ እንደኛው ምስጥርን ከእትዬ ታታሪ ነጥቡ ጎበዝ
-            ችሎታ ለሱሪ እኔ መቋረጥ ዕቅድ መጸሐፍ የፈጠራን ወጣቶቹ ታታሪ ግጥም መመልከት ብጠይቅ ጎሮምሳ ትክክል ለሱሪ እንጂ ብጠይቅ እንደ እየቀደመን እየቀደመን ጎበዝ ትክክል ለሚገኙ ጎበዝ ወጣቶቹ ቅኔዎቹ ቅኔዎቹ ቀይሮ ጎበዝ ሲሻገር ይቻላል ወጣቶቹ የጋሪው ተረት በጊዜ ለገላገሉት ችሎታ ቅኔዎቹ መጠቀም እሷ እኔ እንጂ እኔ የኩሬውን ለሚገኙ መተግበሪያ ገሰገሰ ሲሻገር አጠናቀቁ እንጂ እና
-            በጊዜ ምድር ገሰገሰ ቅኔዎቹ እሱ ለሱሪ ሌላውን መተግበሪያ እና ነጥቡ ውድ ቅኔዎቹ ጎበዝ ቃላቶች እንጂ ዕቅድ ተረት ችሎታ ይቻላል ለገላገሉት ውድ እኔ ዕቅድ እንጂ እየቀደመን እንደኛው ሌላውን እሷ መተግበሪያ ለገላገሉት ቀይሮ እየቀደመን ገሰገሰ እንጂ እንደ ሲሻገር እና የጋሪው መብላት በመስኮት ጎበዝ ለገላገሉት ጎበዝ ነጥቡ ሌላውን በዘፈቀደ ነጥቡ።
+            <big>Maatii Boorenaa Charity Association (MBCA)</big> is a non-governmental, non-profit, community-based association founded in September 2022 for the purpose of serving the community in the improvement of the social wellbeing by addressing
+            critical problems focusing on health, nutritional and educational services. The association is established to serve the interests of communities in Daka Delu Harangema kebele, Negelle Arsi wereda, west Arsi Zone, Oromia Regional State. The
+            kebele, especially the Maatii Booranaa’s village and its surroundings constitute the Lake Langano popular tourist destination site. As a result, it hosts many local visitors and international tourists. The kebele has a population of more than
+            5500 people. Mati Borena Association, therefore, strives to improve the wellbeing of people in the kebele.
         </p>
-        <video width="720" height="410" controls>
-            <source src="/videos/s1e1.mp4" type="video/mp4">
-            Your browser dosen't support HTML5 video
-        </video>
     </section>
 
     <div class="background-container--image2">
         <div class="heading-container">
-            <img class="heading-container__heading--logo" src="/logo.png" alt="Mati Borena" />
+            <span class="heading-container__heading--small">Creating a Brighter Future</span>
         </div>
     </div>
 
     <section class="section section--dark">
-        <h2>TIMELY SOLUTIONS</h2>
+        <h2>Geda Academy</h2>
         <p>
-            ዘባርቅ እንጂ አጠናቀቁ ሲሻገር መመልከት ኢትዮጵያ አጠናቀቁ እሱ እንደኛው ታታሪ በምስራቅ ወጣቶቹ ቀይሮ መተግበሪያ ቀይሮ ጎሮምሳ ከእትዬ ግጥም ብጠይቅ የፈጠራን ይቻላል እንጂ ውድ በምስራቅ እሱ መብላት ምስጥርን።
+            Geda Academy is a pre-elementary school developed by Maatii Booranaa Charity Association with the goal of providing free education, food, and other related things for underprivileged kids. The school is in Langanoo, Ethiopia, and it currently serves over
+            100 children. Geda Academy is an asset to the community of Langanoo. The school is providing a quality education to underprivileged children who would not otherwise could learn. Geda Academy is also helping to improve the lives of the children's
+            families. The school is providing food and other essential services to the families, and it is helping to create a brighter future for the children.
         </p>
     </section>
 
     <div class="background-container--image3">
         <div class="heading-container">
-            <span class="heading-container__heading--small">A Way to Reinvent Our Comunity</span>
+            <span class="heading-container__heading--small">Meaningful Projects</span>
         </div>
     </div>
 
     <section class="section section--light">
         <h2>MISSION</h2>
         <p>
-            ዘባርቅ ኢትዮጵያ ችሎታ መብላት በመስኮት በምስራቅ በጠዋቱ ወጣቶቹ ቅኔዎቹ የጋሪው እንደኛው ችሎታ ታታሪ መብላት መመልከት እንጂ እና እንደ እንደ ችሎታ መቋረጥ እና ለገላገሉት ለሱሪ በጊዜ ተረት ዕቅድ?
+            The overall aim of Maatii Booranaa Charity Association is to serve the community in social wellbeing by providing aid in health, food items and schooling materials for those highly affected part of community. We strive to empower individuals and families
+            to lead healthier and more productive lives. We are committed to building a strong and sustainable future for our community and to making a positive impact on society.
         </p>
     </section>
 
     <div class="background-container--image4">
         <div class="heading-container">
-            <span class="heading-container__heading--small">Meaningful Projects</span>
+            <span class="heading-container__heading--small">community-based Plan</span>
         </div>
     </div>
 
     <section class="section section--dark">
-        <h2>OUR PARTNERS</h2>
-        <p>
-            ዘባርቅ መቋረጥ አጠናቀቁ እኔ ቀይሮ ጎበዝ እሱ ቃላቶች ታታሪ ከእትዬ ተረት ታታሪ ነጥቡ እና ምድር እሷ እና ብጠይቅ ከእትዬ እንጂ መመልከት ለሱሪ ቀይሮ ግጥም ታታሪ እኔ የተሳካለት።
-        </p>
+        <h2>Goals</h2>
+        <ul>
+            <li>Provide free education to underprivileged children in Langano, Ethiopia.</li>
+            <li>Provide free healthcare for the community.</li>
+            <li>Provide access to clean water.</li>
+            <li>To create sustainable income streams to be maintained by the community, and develop their economic prowess.</li>
+            <li>Provide food and other essential services to the children's families.</li>
+            <li>Help to improve the lives of the children and their families.</li>
+            <li>Break the cycle of poverty in the community.</li>
+            <li>Make a difference in the lives of the children and in the community.</li>
+            <li>Be an asset to the community of Langano.</li>
+            <li>Be a success story.</li>
+        </ul>
     </section>
 
     <div class="background-container--image5">
         <div class="heading-container">
-            <span class="heading-container__heading--big">Creating a Brighter Future</span>
+            <span class="heading-container__heading--big">A Brighter Tomorrow</span>
         </div>
     </div>
     <section class="section section--light">
@@ -104,10 +113,9 @@
                 style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
-    <section class="section section--light">
-        <h2>LOCATION</h2>
+    <section class="section section--light" id="location">
+        <h2 id="loc-heading">LOCATION</h2>
         <p>
-            <h2><small>WHERE?</small></h2>
             We are located in the heart of Oromia Regional State, west Arsi Zone, Negelle Arsi wereda, Daka Delu Harangema kebele.
         </p>
 
@@ -116,6 +124,8 @@
 
 <footer class="footer">
     <div class="contact" id="contact">
+
+        <p class="social-head">FOLLOW US</p>
 
         <a href="https://www.facebook.com/" target="_blank" alt="FACEBOOK"> <span class="bi bi-facebook"></span> </a>
 
@@ -126,7 +136,7 @@
 
         <a href="https://www.linkedin.com/" target="_blank" alt="LINKEDIN"> <span class="bi bi-linkedin"></span> </a>
 
-        <a href="mailto:john@gmail.com" target="_blank" alt="EMAIL"> <span class="bi bi-envelope"></span> </a>
+        <a href="mailto:maatiibooranaa@gmail.com" target="_blank" alt="EMAIL"> <span class="bi bi-envelope-fill"></span> </a>
 
 
     </div>
